Compile in_lude.c

--- a/prboom2/src/CMakeLists.txt
+++ b/prboom2/src/CMakeLists.txt
@@ -61,6 +61,7 @@ set(COMMON_SRC
     heretic/dstrings.h
     heretic/dstrings.c
     heretic/info.c
+    heretic/in_lude.c
     heretic/p_action.h
     heretic/sounds.c
     hu_lib.c
