Add missing hud period

--- a/.gitattributes
+++ b/.gitattributes
@@ -36,6 +36,7 @@ prboom2/data/graphics/dig2.ppm -text
 prboom2/data/graphics/dig3.ppm -text
 prboom2/data/graphics/dig4.ppm -text
 prboom2/data/graphics/dig45.ppm -text
+prboom2/data/graphics/dig46.ppm -text
 prboom2/data/graphics/dig47.ppm -text
 prboom2/data/graphics/dig5.ppm -text
 prboom2/data/graphics/dig58.ppm -text
