--- a/prboom2/CMakeLists.txt
+++ b/prboom2/CMakeLists.txt
@@ -32,7 +32,7 @@ endif()
 set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../dependencies_${DEPENDENCY_SUFFIX}")
 
 set(PACKAGE_NAME "${PROJECT_NAME}")
-set(PACKAGE_TARNAME "prboom-plus")
+set(PACKAGE_TARNAME "dsda-doom")
 set(WAD_DATA "dsda-doom.wad")
 set(PACKAGE_VERSION "${PROJECT_VERSION}")
 set(PACKAGE_STRING "${PROJECT_NAME} ${PROJECT_VERSION}")
