--- a/prboom2/ICONS/prboom-plus.desktop
+++ b/prboom2/ICONS/prboom-plus.desktop
@@ -3,8 +3,8 @@ Type=Application
 Name=PrBoom+
 Comment=enhanced clone of the classic first-person shooter Doom
 Icon=prboom-plus
-TryExec=prboom-plus
-Exec=prboom-plus %F
+TryExec=dsda-doom
+Exec=dsda-doom %F
 Categories=Game;ActionGame;
 MimeType=application/x-doom-wad;
 Keywords=first;person;shooter;doom;
