Make heretic am_map.c compile

--- a/prboom2/src/CMakeLists.txt
+++ b/prboom2/src/CMakeLists.txt
@@ -56,6 +56,7 @@ set(COMMON_SRC
     g_game.h
     g_overflow.c
     g_overflow.h
+    heretic/am_map.c
     heretic/d_main.c
     heretic/def.c
     heretic/def.h
