--- a/prboom2/data/CMakeLists.txt
+++ b/prboom2/data/CMakeLists.txt
@@ -415,5 +415,5 @@ add_custom_command(
     COMMAND rdatawad -I "${CMAKE_CURRENT_SOURCE_DIR}" ${WAD_CMDLINE} -o "${WAD_DATA_PATH}"
     DEPENDS rdatawad ${WAD_SRC}
 )
-add_custom_target(prboomwad DEPENDS ${WAD_DATA_PATH})
+add_custom_target(dsda-doom-wad DEPENDS ${WAD_DATA_PATH})
 install(FILES ${WAD_DATA_PATH} DESTINATION ${DOOMWADDIR} COMPONENT "PrBoom-Plus internal WAD")
